--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=7000
-DB_URI=mongodb://127.0.0.1:27017/Netflix
+DB_URI=mongodb+srv://hadiyadhaval:kBliqJMa60FLuPDb@netflixclone.tx7qvuu.mongodb.net/?retryWrites=true&w=majority
 TOKEN_KEY=Thisisprojectofdhavalnameasnetflixusingreactandmongodb 
