--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev" : "nodemon index.js",
+    "build": "npm i",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
