--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=7000
-DB_URI=mongodb+srv://hadiyadhaval:kBliqJMa60FLuPDb@netflixclone.tx7qvuu.mongodb.net/?retryWrites=true&w=majority
-TOKEN_KEY=Thisisprojectofdhavalnameasnetflixusingreactandmongodb 
+DB_URI=mongodb+srv://hadiyadhaval:XxI5IFAIRsL6QwZJ@netflixclone.w3arqo7.mongodb.net/?retryWrites=true&w=majority
+TOKEN_KEY=Thisisprojectofdhavalnameasnetflixusingreactandmongodb
